[package]
name = "calyx-lsp"
version = "0.1.0"
edition = "2021"

[features]
diagnostics = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
itertools = "0.12.1"
regex = "1.10.3"
resolve-path = "0.1.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tower-lsp = "0.20"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tree-sitter = "0.20.10"

[dependencies.tokio]
version = "1"
features = ["io-util", "io-std", "macros", "rt-multi-thread", "net"]

[build-dependencies]
cc = "1.0"

